--- a/front/src/components/Colorblindness.css
+++ b/front/src/components/Colorblindness.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap');
 .con2{
     height: 100%;
     display: flex;
@@ -12,21 +13,28 @@
 }
 
 .eyeTextC{
-    width:400px;
+    width:330px;
     font-size: 17px;
+    font-family: "Noto Sans TC", sans-serif;
+    font-weight: 1000;
     text-align: left;
-    margin-left: 50px;
+    margin-left: 30px;
+    margin-top: 25px;
 }
 .eyeTextC2{
     width:400px;
     font-size: 14px;
+    font-family: "Noto Sans TC", sans-serif;
+    font-weight: 500;
     text-align: left;
-    margin-left: 50px;
-    margin-top:50px;
+    margin-left: 31px;
+    margin-top:40px;
     color: #393939;
 }
 .testUrl{
-    font-size: 12px;
+    font-size: 14px;
+    font-family: "Noto Sans TC", sans-serif;
+    font-weight: 500;
     text-align: left;
     margin-left: 5px;
     color: #5167DB
@@ -47,21 +55,36 @@
 }
 .selectTypeText{
     margin-bottom: 5px;
+    margin-left: 8px;
+    font-family: "Noto Sans TC", sans-serif;
+    font-weight: bold;
 }
 .type{
     margin: 7px;
-    width: 50%;
+    width: 60%;
     height: 40px;
     border: none;
+    font-family: "Noto Sans TC", sans-serif;
+    font-weight: bold;
     background-color: #ffffff; 
+    color: #393939;
     border-radius: 5px; 
+}
+.selectLevelText{
+    margin-bottom: 5px;
+    margin-left: 7px;
+    font-family: "Noto Sans TC", sans-serif;
+    font-weight: bold;
 }
 .level{
     margin: 7px;
     width: 50%;
     height: 40px;
     border: none;
-    background-color: #ffffff; 
+    font-family: "Noto Sans TC", sans-serif;
+    font-weight: bold;
+    background-color: #ffffff;
+    color: #393939; 
     border-radius: 5px; 
 }
 .selectLevel {
@@ -69,15 +92,19 @@
     flex-direction: column;
     justify-items: left;
     text-align: left;
-    width: 50%;
+    width: 48%;
 }
 
 .nextbtn{
     margin-top: 7%;
     margin-bottom: 5%;
-    width: 50%;
+    margin-left: 2%;
+    width: 59.5%;
     height: 40px;
     border: none;
-    background-color: #D9D9D9; 
+    font-family: "Noto Sans TC", sans-serif;
+    font-weight: bold;
+    background-color: #D9D9D9;
+    color: #393939; 
     border-radius: 5px; 
 }
