--- a/front/src/components/Homepage.css
+++ b/front/src/components/Homepage.css
@@ -10,7 +10,7 @@
     top: 20%;
     left: 50%;
     transform: translateX(-50%);
-    font-size: 27px;
+    font-size: 35px;
     font-family: "IM Fell DW Pica SC", serif;
 }
 .homeTitle2{
@@ -18,19 +18,19 @@
     top: 25%;
     left: 50%;
     transform: translateX(-50%);
-    font-size: 12px;
+    font-size: 14px;
     color: #393939;
 }
 .head{
     position: fixed;
-    bottom: -70px;
-    left: 50%;
-    transform: translateX(-50%) scale(0.8);
+    bottom: -30px;
+    left: 49%;
+    transform: translateX(-50%) scale(1);
 }
 .ear{
     position: absolute;
-    top: 50%;
-    left: 65%;
+    top: 45%;
+    left: 70%;
     animation: pulse 1.5s infinite;
 }
 
@@ -42,14 +42,16 @@
 
 .earText{
     position: absolute;
-    top: 89%;
-    left: 62%;
+    top: 85%;
+    left: 67%;
     color: #FFFFFF;
+    font-size: 20px;
+    font-family: "IM Fell DW Pica SC", serif;
 }
 .eye{
     position: absolute;
-    top: 50%;
-    left: 25%;
+    top: 45%;
+    left: 23%;
     animation: pulse 1.5s infinite;
 }
 .eye:hover {
@@ -57,9 +59,11 @@
 }
 .eyeText{
     position: absolute;
-    top: 77%;
-    left: 29%;
+    top: 72%;
+    left: 24.5%;
     color: #FFFFFF;
+    font-size: 20px;
+    font-family: "IM Fell DW Pica SC", serif;
 }
 .head1 {
 
