--- a/front/src/components/Correction.css
+++ b/front/src/components/Correction.css
@@ -43,12 +43,37 @@ dialog{
     width:680px;
     height:90%;
     box-shadow: 0 2px 6px #ccc;
-    border-radius: 17px;
+    border-radius: 10px;
+    justify-items: left;
     overflow: hidden;
+    position: relative;
   }
   dialog::backdrop {
     background-color: rgba(0, 0, 0, 0.1);
   }
+.docD{
+    position: relative;
+}
+
+.close{
+    position: absolute;
+    top: 0;
+    right: 0;
+    border: none;
+    width:5%;
+    height:5%;
+    background-color: #efecec; 
+    border-radius: 5px; 
+    z-index: 1;
+}
+.reColSec{
+    display: none;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(192, 2, 2, 0.5)
+
+}
+
 
 @media screen and (max-width: 900px) {
 .corSec {
